--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,7 +29,17 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+
+      <div class="hour">9am</div>
+      <div class="hour">10am</div>
+      <div class="hour">11am</div>
+      <div class="hour">12am</div>
+      <div class="hour">1pm</div>
+      <div class="hour">2pm</div>
+      <div class="hour">3pm</div>
+      <div class="hour">4pm</div>
+      <div class="hour">5pm</div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
