--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,48 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Work Day Scheduler</title>
+</head>
 
-      <div class="hour">9am</div>
-      <div class="hour">10am</div>
-      <div class="hour">11am</div>
-      <div class="hour">12am</div>
-      <div class="hour">1pm</div>
-      <div class="hour">2pm</div>
-      <div class="hour">3pm</div>
-      <div class="hour">4pm</div>
-      <div class="hour">5pm</div>
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <!---Timeblocks go here-->
 
+    <div class="row">
+      <span class="hour">9 AM</span>
+      <input type="text" class=" description" id=9
+
+      >
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">10 AM</span>
+      <input type="text" class="description" id=10></imput>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">11 AM</span>
+      <input type="text" class="description" id=11>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">12 AM</span>
+      <input type="text" class="description" id=12>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">1 PM</span>
+      <input type="text" class="description" id=13>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">2 PM</span>
+      <input type="text" class="description" id=14>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">3 PM</span>
+      <input type="text" class="description" id=15>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">4 PM</span>
+      <input type="text" class="description" id=16>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+    </div>
+    <div class="row">
+      <span class="hour">5 PM</span>
+      <input type="text" class="description" id=17>
+      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+  </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
