"fixing BS grid"

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -22,55 +22,133 @@
   <div class="container">
     <!---Timeblocks go here-->
 
-    <div class="row">
-      <span class="hour">9 AM</span>
-      <input type="text" class=" description" id=9
+    <div class="row no-gutters time-block">
 
-      >
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">10 AM</span>
-      <input type="text" class="description" id=10></imput>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">11 AM</span>
-      <input type="text" class="description" id=11>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">12 AM</span>
-      <input type="text" class="description" id=12>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">1 PM</span>
-      <input type="text" class="description" id=13>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">2 PM</span>
-      <input type="text" class="description" id=14>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">3 PM</span>
-      <input type="text" class="description" id=15>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">4 PM</span>
-      <input type="text" class="description" id=16>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
-    </div>
-    <div class="row">
-      <span class="hour">5 PM</span>
-      <input type="text" class="description" id=17>
-      <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      <div class="col-sm-1">
+        <div class="hour">9AM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="9"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
     </div>
 
-  </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">10AM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="10"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">11AM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="11"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">12PM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="12"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">1PM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="13"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">2PM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="14"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">3PM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="15"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">4PM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="16"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
+    <div class="row no-gutters time-block">
+
+      <div class="col-sm-1">
+        <div class="hour">5PM</div>
+      </div>
+      <div class="col-sm-10">
+        <div class="description" id="17"><textarea></textarea></div>
+      </div>
+      <div class="col-sm-1">
+        <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
+      </div>
+
+    </div>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
