--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,13 +24,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">9AM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="9"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="9"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -39,13 +39,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">10AM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="10"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="10"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -53,13 +53,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">11AM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="11"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="11"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -67,13 +67,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">12PM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="12"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="12"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -81,13 +81,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">1PM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="13"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="13"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -95,13 +95,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">2PM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="14"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="14"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -109,13 +109,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">3PM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="15"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="15"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -123,13 +123,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">4PM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="16"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="16"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
@@ -137,13 +137,13 @@
 
     <div class="row no-gutters time-block">
 
-      <div class="col-sm-1">
+      <div class="col-sm-1 first">
         <div class="hour">5PM</div>
       </div>
-      <div class="col-sm-10">
-        <div class="description" id="17"><textarea></textarea></div>
+      <div class="col-sm-10 second">
+        <input class="description textarea" id="17"></input>
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1 third">
         <button class="saveBtn"><i class="fas fa-calendar-plus"></i></button>
       </div>
 
